# video-asr

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh.md  pyproject.toml  requirements.txt
.claude/skills/video-asr/: SKILL.md
.github/workflows/: publish.yml
scripts/: install.ps1
src/video_asr/: __init__.py  __main__.py  cli.py
